manifests_base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: health-deployment
spec:
    replicas: 3
    selector:
       matchLabels:
          app: health-service-app
    template:
       metadata:
          labels:
             app: health-service-app
       spec:
          containers:
          - name: health-service
            image: pingvincible/health-service:1.1
            ports:
              - name: web
                containerPort: 8000
            livenessProbe:
              httpGet:
                port: 8000
                path: /
              initialDelaySeconds: 10
              periodSeconds: 5
              timeoutSeconds: 2
            readinessProbe:
              httpGet:
                port: 8000
                path: /health
              initialDelaySeconds: 10
              periodSeconds: 5
